# parsing-munihac2023

./: Parsing.hs  Simple.hs
inputs/: arrow1.txt  arrow2.txt  chess1.txt  chess2.txt  chess3.txt  differences1.txt  differences2.txt  tree1.txt  tree2.txt  tree3.txt
parsing-munihac2023/: Parsing.hs  parsing-munihac2023.cabal
